--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -1,4 +1,5 @@
 $color-green: #19641e;
+$color-green-rgb: 25, 100, 30;
 $color-yellow: #f7c35f;
 $color-black: #000;
 $color-white: #e4e4e4;
@@ -128,6 +129,10 @@ table {
     }
 }
 
+.text-primary{
+    color: $color-green !important;
+}
+
 .text-clipped {
     display: -webkit-box;
     line-clamp: var(--clamp-lines);
@@ -230,8 +235,6 @@ table {
         img {
             border-radius: 50%;
             overflow: hidden;
-            width: 100%;
-            height: 100%;
             object-fit: cover;
         }
     }
@@ -514,6 +517,10 @@ svg#india_map {
             fill: darken($color-yellow, 10);
         }
     }
+}
+.details-view{
+    top: 0;
+    right: 0;
 }
 
 footer {
