--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -171,6 +171,90 @@ table th {
   animation: "flash" 5s ease-in-out infinite;
 }
 
+.text-black-10 {
+  color: rgba(0, 0, 0, 0.1) !important;
+}
+
+.bg-secondary-10 {
+  background-color: rgba(247, 195, 95, 0.1) !important;
+}
+
+.text-black-20 {
+  color: rgba(0, 0, 0, 0.2) !important;
+}
+
+.bg-secondary-20 {
+  background-color: rgba(247, 195, 95, 0.2) !important;
+}
+
+.text-black-30 {
+  color: rgba(0, 0, 0, 0.3) !important;
+}
+
+.bg-secondary-30 {
+  background-color: rgba(247, 195, 95, 0.3) !important;
+}
+
+.text-black-40 {
+  color: rgba(0, 0, 0, 0.4) !important;
+}
+
+.bg-secondary-40 {
+  background-color: rgba(247, 195, 95, 0.4) !important;
+}
+
+.text-black-50 {
+  color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.bg-secondary-50 {
+  background-color: rgba(247, 195, 95, 0.5) !important;
+}
+
+.text-black-60 {
+  color: rgba(0, 0, 0, 0.6) !important;
+}
+
+.bg-secondary-60 {
+  background-color: rgba(247, 195, 95, 0.6) !important;
+}
+
+.text-black-70 {
+  color: rgba(0, 0, 0, 0.7) !important;
+}
+
+.bg-secondary-70 {
+  background-color: rgba(247, 195, 95, 0.7) !important;
+}
+
+.text-black-80 {
+  color: rgba(0, 0, 0, 0.8) !important;
+}
+
+.bg-secondary-80 {
+  background-color: rgba(247, 195, 95, 0.8) !important;
+}
+
+.text-black-90 {
+  color: rgba(0, 0, 0, 0.9) !important;
+}
+
+.bg-secondary-90 {
+  background-color: rgba(247, 195, 95, 0.9) !important;
+}
+
+.text-black-100 {
+  color: black !important;
+}
+
+.bg-secondary-100 {
+  background-color: #f7c35f !important;
+}
+
+.bg-secondary-50 {
+  background-color: rgba(247, 195, 95, 0.5);
+}
+
 .border-primary {
   border-color: #19641e !important;
 }
@@ -541,6 +625,33 @@ section .section-title::before {
   justify-content: center;
   border-radius: 50%;
   border: 1px solid #000;
+}
+
+.event-tile-three {
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+.event-tile-three .thumb {
+  border-radius: 1rem;
+  overflow: hidden;
+  border: 0.3rem solid #19641e;
+  width: 100%;
+  aspect-ratio: 16/9;
+}
+.event-tile-three .thumb img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.event-tile-three .event-details h3 {
+  line-height: 1.3;
+}
+.event-tile-three .event-details p {
+  color: rgba(0, 0, 0, 0.7);
 }
 
 svg#india_map path {
