--- a/main-website/public/theme02/assets/scss/style.scss
+++ b/main-website/public/theme02/assets/scss/style.scss
@@ -184,6 +184,21 @@ table {
     animation: "flash" 5s ease-in-out infinite;
 }
 
+@for $i from 10 through 100 {
+    @if ($i % 10 == 0){
+        .text-black-#{$i}{
+            color: rgba($color-black,  calc($i/100)) !important;
+        }
+        .bg-secondary-#{$i}{
+            background-color: rgba($color-yellow, calc($i/100)) !important;
+        }
+    }
+}
+
+.bg-secondary-50{
+    background-color: rgba($color-yellow, 0.5);
+}
+
 .border-primary {
     border-color: $color-green !important;
 }
@@ -544,6 +559,7 @@ section {
         }
     }
 }
+
 .event-style-two {
     a {
         h3,
@@ -594,6 +610,33 @@ section {
             justify-content: center;
             border-radius: 50%;
             border: 1px solid $color-black;
+        }
+    }
+}
+
+.event-tile-three{
+    background-color: white;
+    border-radius: 1rem;
+    padding: 1rem;
+    .thumb{
+        border-radius: 1rem;
+        overflow: hidden;
+        border: 0.3rem solid $color-green;
+        width: 100%;
+        aspect-ratio: 16/9;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+    .event-details{
+        h3{
+            line-height: 1.3;
+        }
+        p{
+            color: rgba($color-black, 0.7);
         }
     }
 }
