--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -4,6 +4,10 @@ body {
   color: #000;
 }
 
+main {
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -130,6 +134,14 @@ table th {
   border: 1px solid black;
   color: black;
 }
+.btn.btn-overlap-fixed {
+  z-index: 1;
+  position: absolute;
+  border-radius: 0;
+}
+.btn.btn-overlap-fixed.right-0 {
+  right: 0;
+}
 @media screen and (min-width: 512px) {
   .btn.btn-search {
     width: 200px;
@@ -178,6 +190,26 @@ table th {
 .bg-secondary-10 {
   background-color: rgba(247, 195, 95, 0.1) !important;
 }
+.bg-secondary-10.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-10 {
+  background-color: rgba(25, 100, 30, 0.1) !important;
+}
+.bg-primary-10.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
 
 .text-black-20 {
   color: rgba(0, 0, 0, 0.2) !important;
@@ -185,6 +217,26 @@ table th {
 
 .bg-secondary-20 {
   background-color: rgba(247, 195, 95, 0.2) !important;
+}
+.bg-secondary-20.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-20 {
+  background-color: rgba(25, 100, 30, 0.2) !important;
+}
+.bg-primary-20.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
 }
 
 .text-black-30 {
@@ -194,6 +246,26 @@ table th {
 .bg-secondary-30 {
   background-color: rgba(247, 195, 95, 0.3) !important;
 }
+.bg-secondary-30.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-30 {
+  background-color: rgba(25, 100, 30, 0.3) !important;
+}
+.bg-primary-30.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
 
 .text-black-40 {
   color: rgba(0, 0, 0, 0.4) !important;
@@ -201,6 +273,26 @@ table th {
 
 .bg-secondary-40 {
   background-color: rgba(247, 195, 95, 0.4) !important;
+}
+.bg-secondary-40.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-40 {
+  background-color: rgba(25, 100, 30, 0.4) !important;
+}
+.bg-primary-40.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
 }
 
 .text-black-50 {
@@ -210,6 +302,26 @@ table th {
 .bg-secondary-50 {
   background-color: rgba(247, 195, 95, 0.5) !important;
 }
+.bg-secondary-50.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-50 {
+  background-color: rgba(25, 100, 30, 0.5) !important;
+}
+.bg-primary-50.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
 
 .text-black-60 {
   color: rgba(0, 0, 0, 0.6) !important;
@@ -217,6 +329,26 @@ table th {
 
 .bg-secondary-60 {
   background-color: rgba(247, 195, 95, 0.6) !important;
+}
+.bg-secondary-60.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-60 {
+  background-color: rgba(25, 100, 30, 0.6) !important;
+}
+.bg-primary-60.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
 }
 
 .text-black-70 {
@@ -226,6 +358,26 @@ table th {
 .bg-secondary-70 {
   background-color: rgba(247, 195, 95, 0.7) !important;
 }
+.bg-secondary-70.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-70 {
+  background-color: rgba(25, 100, 30, 0.7) !important;
+}
+.bg-primary-70.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
 
 .text-black-80 {
   color: rgba(0, 0, 0, 0.8) !important;
@@ -233,6 +385,26 @@ table th {
 
 .bg-secondary-80 {
   background-color: rgba(247, 195, 95, 0.8) !important;
+}
+.bg-secondary-80.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-80 {
+  background-color: rgba(25, 100, 30, 0.8) !important;
+}
+.bg-primary-80.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
 }
 
 .text-black-90 {
@@ -242,6 +414,26 @@ table th {
 .bg-secondary-90 {
   background-color: rgba(247, 195, 95, 0.9) !important;
 }
+.bg-secondary-90.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-90 {
+  background-color: rgba(25, 100, 30, 0.9) !important;
+}
+.bg-primary-90.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
 
 .text-black-100 {
   color: black !important;
@@ -249,6 +441,30 @@ table th {
 
 .bg-secondary-100 {
   background-color: #f7c35f !important;
+}
+.bg-secondary-100.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.bg-primary-100 {
+  background-color: #19641e !important;
+}
+.bg-primary-100.bg-watermark {
+  background-image: url("../icons/logo-faded.png");
+  background-size: max(5vw, 3rem) auto;
+  background-repeat: repeat;
+  background-position: center;
+  background-blend-mode: lighten;
+  background-attachment: fixed;
+}
+
+.badge {
+  font-weight: normal;
 }
 
 .bg-secondary-50 {
@@ -376,6 +592,11 @@ header {
 }
 header nav.navbar .navbar-nav .nav-item .nav-link {
   color: #000;
+  border-bottom: 1px solid transparent;
+}
+header nav.navbar .navbar-nav .nav-item .nav-link.active {
+  color: #19641e;
+  border-color: #19641e;
 }
 
 .swiper .swiper-button-prev::after {
@@ -496,27 +717,24 @@ section .section-title::before {
   background-size: 105% auto;
 }
 
-.floating-widget {
+.floating-widget-stack {
   z-index: 9999;
+  position: fixed;
+  cursor: pointer;
+  width: 3rem;
+  height: -moz-fit-content;
+  height: fit-content;
 }
-.floating-widget.floating-style-01 {
-  bottom: 0;
-  right: 0;
+.floating-widget-stack.floating-style-01 {
+  right: 1rem;
+  bottom: 1rem;
+}
+.floating-widget-stack .round-widget {
   width: 100%;
-  border-radius: 0;
-  display: flex;
-}
-.floating-widget.floating-style-01 * {
-  flex: 1;
-}
-@media screen and (min-width: 768px) {
-  .floating-widget.floating-style-01 {
-    display: block;
-    right: 10%;
-    width: -moz-fit-content;
-    width: fit-content;
-    border-radius: 0.25rem;
-  }
+  aspect-ratio: 1;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
 }
 
 .event-style-one a h3,
@@ -627,6 +845,30 @@ section .section-title::before {
   border: 1px solid #000;
 }
 
+.event-tile-two .thumb {
+  border-radius: 1rem;
+  overflow: hidden;
+  border: 0.3rem solid #19641e;
+  width: 100%;
+  aspect-ratio: 16/9;
+}
+.event-tile-two .thumb img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.event-tile-two .event-details h3 {
+  font-size: 1.3rem;
+  line-height: 1.3;
+}
+.event-tile-two .event-details p {
+  font-size: 1rem;
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .event-tile-three {
   background-color: white;
   border-radius: 1rem;
@@ -648,10 +890,119 @@ section .section-title::before {
      object-position: center;
 }
 .event-tile-three .event-details h3 {
+  font-size: 1.3rem;
   line-height: 1.3;
 }
 .event-tile-three .event-details p {
+  font-size: 1rem;
   color: rgba(0, 0, 0, 0.7);
+}
+
+.speaker-style-two {
+  position: relative;
+  border: 0.25rem solid transparent;
+}
+.speaker-style-two::before, .speaker-style-two::after {
+  content: "";
+  position: absolute;
+  height: 120px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
+.speaker-style-two::before {
+  -webkit-clip-path: polygon(0 0, 100% 2rem, 100% 100%, 0% 100%);
+          clip-path: polygon(0 0, 100% 2rem, 100% 100%, 0% 100%);
+  background-color: #fff;
+  z-index: 0;
+}
+.speaker-style-two::after {
+  -webkit-clip-path: polygon(0 2rem, 100% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 2rem, 100% 0, 100% 100%, 0% 100%);
+  background-color: #f7c35f;
+  z-index: 0;
+}
+.speaker-style-two .text-content {
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+.speaker-style-two .text-content h3 {
+  font-size: 1.3rem;
+  line-height: 1.3;
+  margin-bottom: 0.2rem;
+}
+.speaker-style-two .text-content p {
+  font-size: 1rem;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.7);
+}
+.speaker-style-two .large-desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  transition: all 0.5s ease-in-out;
+  padding: 1rem;
+  background-color: #f7c35f;
+  z-index: 1;
+}
+.speaker-style-two .large-desc h3 {
+  font-size: 1.3rem;
+  line-height: 1.3;
+  margin-bottom: 0.2rem;
+}
+.speaker-style-two .large-desc p {
+  font-size: 1rem;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.7);
+}
+.speaker-style-two:hover {
+  border-color: #19641e;
+}
+.speaker-style-two:hover .large-desc {
+  transform: translateY(0);
+}
+
+.flip-content {
+  background-color: transparent;
+  width: 100%;
+  height: 400px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-content:hover .flip-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-front,
+.flip-back {
+  position: absolute;
+  width: 100%;
+  height: 100%; /* Safari */
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
 }
 
 svg#india_map path {
@@ -672,6 +1023,9 @@ svg#india_map path:active {
 .details-view {
   top: 0;
   right: 0;
+}
+.details-view .map_details {
+  min-width: 200px;
 }
 
 footer {
