--- a/main-website/mandi-admin/assets/css/custom.css
+++ b/main-website/mandi-admin/assets/css/custom.css
@@ -24,13 +24,6 @@ form label.response {
   font-size: 1.1rem;
 }
 
-form input.form-control,
-form textarea.form-control {
-  border: 1px solid #969696;
-}
-form .select2-selection {
-  border: 1px solid #969696 !important;
-}
 form label.error {
   color: red;
   font-size: 0.8rem;
@@ -40,19 +33,19 @@ form label.error {
   font-size: 0.8rem;
   font-weight: normal;
   background-color: rgba(28, 28, 28, 0.2) !important;
-  color: #030303 !important;
+  color: rgb(2.5, 2.5, 2.5) !important;
 }
 .badge.bg-danger {
   background-color: rgba(183, 32, 38, 0.2) !important;
-  color: #8c181d !important;
+  color: rgb(139.5906976744, 24.4093023256, 28.9860465116) !important;
 }
 .badge.bg-success {
   background-color: rgba(3, 148, 59, 0.2) !important;
-  color: #026227 !important;
+  color: rgb(1.9867549669, 98.0132450331, 39.0728476821) !important;
 }
 .badge.bg-warning {
   background-color: rgba(207, 139, 44, 0.2) !important;
-  color: #a56f23 !important;
+  color: rgb(164.9402390438, 110.7569721116, 35.0597609562) !important;
 }
 
 .nomination_detailed .tab-content {
