--- a/main-website/mandi-admin/assets/scss/custom.scss
+++ b/main-website/mandi-admin/assets/scss/custom.scss
@@ -39,11 +39,11 @@ form {
     input,
     textarea {
         &.form-control {
-            border: 1px solid #969696;
+            // border: 1px solid #969696;
         }
     }
     .select2-selection {
-        border: 1px solid #969696 !important;
+        // border: 1px solid #969696 !important;
     }
     label.error {
         color: red;
@@ -64,6 +64,10 @@ form {
         //     box-shadow: 0 0 0 0.25rem rgba($color-red, 0.2);
         // }
     }
+}
+
+table tr td{
+
 }
 
 .badge {
