Episodes, Categories & Tags

--- a/main-website/mandi-admin/assets/css/custom.css
+++ b/main-website/mandi-admin/assets/css/custom.css
@@ -85,6 +85,7 @@ table a {
 
 .clipped-content {
   overflow: hidden;
+  text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
 }
