--- a/main-website/public/theme02/assets/css/style.css
+++ b/main-website/public/theme02/assets/css/style.css
@@ -57,12 +57,12 @@ table th {
   --bs-btn-bg: #19641e;
   --bs-btn-border-color: #19641e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1e7824;
-  --bs-btn-hover-border-color: #1e7824;
+  --bs-btn-hover-bg: rgb(30.1, 120.4, 36.12);
+  --bs-btn-hover-border-color: rgb(30.1, 120.4, 36.12);
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1e7824;
-  --bs-btn-active-border-color: #1e7824;
+  --bs-btn-active-bg: rgb(30.1, 120.4, 36.12);
+  --bs-btn-active-border-color: rgb(30.1, 120.4, 36.12);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #19641e;
@@ -73,12 +73,12 @@ table th {
   --bs-btn-bg: #f7c35f;
   --bs-btn-border-color: #f7c35f;
   --bs-btn-hover-color: #000 !important;
-  --bs-btn-hover-bg: #f8cc77;
-  --bs-btn-hover-border-color: #f8cc77;
+  --bs-btn-hover-bg: rgb(248.2142857143, 204.1071428571, 119.2857142857);
+  --bs-btn-hover-border-color: rgb(248.2142857143, 204.1071428571, 119.2857142857);
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #f8cc77;
-  --bs-btn-active-border-color: #f8cc77;
+  --bs-btn-active-bg: rgb(248.2142857143, 204.1071428571, 119.2857142857);
+  --bs-btn-active-border-color: rgb(248.2142857143, 204.1071428571, 119.2857142857);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #f7c35f;
@@ -189,6 +189,10 @@ table th {
   background-clip: text;
   background-size: cover;
   animation: "flash" 5s ease-in-out infinite;
+}
+
+.bg-primary {
+  background-color: #19641e !important;
 }
 
 .text-black-10 {
@@ -958,14 +962,12 @@ section .section-title::before {
   left: 0;
 }
 .speaker-style-two::before {
-  -webkit-clip-path: polygon(0 0, 100% 2rem, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 2rem, 100% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 2rem, 100% 100%, 0% 100%);
   background-color: #fff;
   z-index: 0;
 }
 .speaker-style-two::after {
-  -webkit-clip-path: polygon(0 2rem, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 2rem, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0 2rem, 100% 0, 100% 100%, 0% 100%);
   background-color: #f7c35f;
   z-index: 0;
 }
@@ -1064,7 +1066,7 @@ svg#india_map path:not(.active):hover {
   fill: #f7c35f;
 }
 svg#india_map path:active {
-  fill: #f5b12e;
+  fill: rgb(244.5714285714, 176.7857142857, 46.4285714286);
 }
 
 .details-view {
