--- a/main-website/static/theme-02/assets/css/style.css
+++ b/main-website/static/theme-02/assets/css/style.css
@@ -18,12 +18,12 @@ a {
   --bs-btn-bg: #19641e;
   --bs-btn-border-color: #19641e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1e7824;
-  --bs-btn-hover-border-color: #1e7824;
+  --bs-btn-hover-bg: rgb(30.1, 120.4, 36.12);
+  --bs-btn-hover-border-color: rgb(30.1, 120.4, 36.12);
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1e7824;
-  --bs-btn-active-border-color: #1e7824;
+  --bs-btn-active-bg: rgb(30.1, 120.4, 36.12);
+  --bs-btn-active-border-color: rgb(30.1, 120.4, 36.12);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #19641e;
@@ -34,12 +34,12 @@ a {
   --bs-btn-bg: #f7c35f;
   --bs-btn-border-color: #f7c35f;
   --bs-btn-hover-color: $color-black;
-  --bs-btn-hover-bg: #f8cc77;
-  --bs-btn-hover-border-color: #f8cc77;
+  --bs-btn-hover-bg: rgb(248.2142857143, 204.1071428571, 119.2857142857);
+  --bs-btn-hover-border-color: rgb(248.2142857143, 204.1071428571, 119.2857142857);
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
   --bs-btn-active-color: $color-black;
-  --bs-btn-active-bg: #f8cc77;
-  --bs-btn-active-border-color: #f8cc77;
+  --bs-btn-active-bg: rgb(248.2142857143, 204.1071428571, 119.2857142857);
+  --bs-btn-active-border-color: rgb(248.2142857143, 204.1071428571, 119.2857142857);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: $color-black;
   --bs-btn-disabled-bg: #f7c35f;
