Blogs CRUD & Filter

--- a/main-website/mandi-admin/assets/scss/custom.scss
+++ b/main-website/mandi-admin/assets/scss/custom.scss
@@ -189,7 +189,7 @@ table {
 .blog-title {
     display: inline-block;
     text-overflow: ellipsis;
-    width: 400px;
+    max-width: 400px;
     overflow: hidden;
 }
 .embed-fullscreen{
