--- a/main-website/mandi-admin/assets/css/custom.css
+++ b/main-website/mandi-admin/assets/css/custom.css
@@ -139,7 +139,7 @@ table a {
 .blog-title {
   display: inline-block;
   text-overflow: ellipsis;
-  width: 400px;
+  max-width: 400px;
   overflow: hidden;
 }
 
